--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,19 @@
     tools:context=".MainActivity">
 
     <SurfaceView
-        android:id="@+id/surfaceView"
+        android:id="@+id/surfaceView1"
         android:layout_width="match_parent"
-        android:layout_height="300dp" />
+        android:layout_height="150dp" />
+
+    <SurfaceView
+        android:id="@+id/surfaceView2"
+        android:layout_width="match_parent"
+        android:layout_height="150dp" />
+
+    <SurfaceView
+        android:id="@+id/surfaceView3"
+        android:layout_width="match_parent"
+        android:layout_height="150dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
